@@ -5,6 +5,7 @@
   fix HTTP pipelining fd leak
   add broken-symlink-redirect like fnord does (read README.redirect)
   output size in log as 64-bit number
+  add resume support to dl
 
 0.4:
   add primitive FTP support (default: enabled; disable with -F!)
